--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </parent>
     <groupId>org.jboss.bom.portal</groupId>
     <artifactId>jboss-portal-bom</artifactId>
-    <version>6.1.1.build-3-SNAPSHOT</version>
+    <version>6.2.0.build-1-SNAPSHOT</version> <!-- 6.2.0.ER1 -->
     <packaging>pom</packaging>
     <name>Bill of Materials (BOM) needed for developing appplications for JBoss Portal</name>
     <url>http://www.jboss.org</url>
@@ -59,7 +59,7 @@
         <version.org.richfaces.mm>4.3</version.org.richfaces.mm>
         <version.javax.portlet.portlet.api>2.0</version.javax.portlet.portlet.api>
 
-        <version.org.jboss.gatein.api>1.0.1.Final</version.org.jboss.gatein.api>
+        <version.org.jboss.gatein.api>1.1.0.Final</version.org.jboss.gatein.api>
 
         <!-- maven-release-plugin -->
         <maven.release.plugin.useReleaseProfile>false</maven.release.plugin.useReleaseProfile>
